# onednn-src

./: .bumpversion.toml  .dprint.json  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  mise.toml
.github/workflows/: build.yaml  release.yaml
src/: lib.rs
