[package]
name = "onednn-src"
version = "0.1.0"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
categories = ["science"]
edition = "2024"
exclude = [".*"]
keywords = ["deep-neural-networks", "deep-learning", "oneapi", "onednn"]
license = "MIT"
links = "dnnl"
repository = "https://github.com/jkawamoto/onednn-src"
description = "Source of oneAPI Deep Neural Network Library (oneDNN)"

[build-dependencies]
cmake = "0.1"

[features]
default = ["training"]
graph = []
training = []
inference = []
experimental = []
verbose = []
